feat: add raw query and pagination :zap:
