# pkg/handler/blog_handler.go
@@ -45,3 +45,43 @@ func (b *BlogHandler) CreateBlogHandler(c *fiber.Ctx) error {
 
 	return utils.SuccessResponse(c, fiber.StatusCreated, "Succes Create Blog 🚀", blog)
 }
+
+// @Summary		    Find All Blogs Paginate
+// @Description	Get a list of all Blogs with pagination
+// @Tags			      Blog
+// @Accept			     json
+// @Produce		    json
+// @Security		        BearerAuth
+// @Param			request	query	model.PaginationRequest	true		"Pagination Request Payload"
+// @Success		 		 		200						{object}	model.ResponseEntityPagination[[]res.FindAllBlogsResponse]
+// @Failure		 		 		401						{object}	model.ResponseError[any]
+// @Router			     /blog/paginate [get]
+func (b *BlogHandler) FindAllPaginateHandler(c *fiber.Ctx) error {
+	var params model.PaginationRequest
+
+	if err := c.QueryParser(&params); err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, err.Error())
+	}
+
+	if params.Page <= 0 {
+		params.Page = 1
+	}
+
+	if params.Limit <= 0 {
+		params.Limit = 5
+	}
+
+	meta, blogs, err := b.blogService.FindAllPaginate(&params)
+
+	if err != nil {
+		return err
+	}
+
+	return utils.SuccessResponsePaginate(
+		c,
+		fiber.StatusOK,
+		"Success Find All Blogs Paginate",
+		blogs,
+		meta,
+	)
+}
